--- a/index.ipynb
+++ b/index.ipynb
@@ -48,7 +48,7 @@
    "outputs": [],
    "source": [
     "# Import pandas using the standard alias\n",
-    "\n",
+    "impor\n",
     "\n",
     "# Import 'WorldCupMatches.csv' as a DataFrame\n",
     "df = None"
