--- a/index.ipynb
+++ b/index.ipynb
@@ -51,7 +51,7 @@
     "import pandas as pd\n",
     "\n",
     "# Import 'WorldCupMatches.csv' as a DataFrame\n",
-    "df = pd.read_csv()"
+    "df = pd.read_csv('WorldCupMatches.csv')"
    ]
   },
   {
