Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -532,7 +532,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Print a concise summary of df\n"
+    "# Print a concise summary of df\n",
+    "d"
    ]
   },
   {
