--- a/index.ipynb
+++ b/index.ipynb
@@ -581,7 +581,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Print the number of rows and columns in df\n"
+    "# Print the number of rows and columns in df\n",
+    "df.shape\n"
    ]
   },
   {
