Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -813,12 +813,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-11-310299d02c0d>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-310299d02c0d>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    df.loc([5:9, 'Home Team Name', 'Away Team Name'])\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "# Print rows 5 through 9 and columns 'Home Team Name' and 'Away Team Name'\n",
-    "df.loc([5:9, )"
+    "df.loc([5:9, 'Home Team Name', 'Away Team Name'])"
    ]
   },
   {
