--- a/index.ipynb
+++ b/index.ipynb
@@ -813,21 +813,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-11-310299d02c0d>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-11-310299d02c0d>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    df.loc([5:9, 'Home Team Name', 'Away Team Name'])\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Home Team Name</th>\n",
+       "      <th>Away Team Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>Chile</td>\n",
+       "      <td>Mexico</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>Yugoslavia</td>\n",
+       "      <td>Bolivia</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Paraguay</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>Uruguay</td>\n",
+       "      <td>Peru</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>Chile</td>\n",
+       "      <td>France</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Home Team Name Away Team Name\n",
+       "5          Chile         Mexico\n",
+       "6     Yugoslavia        Bolivia\n",
+       "7            USA       Paraguay\n",
+       "8        Uruguay           Peru\n",
+       "9          Chile         France"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Print rows 5 through 9 and columns 'Home Team Name' and 'Away Team Name'\n",
-    "df.loc([5:9, ['Home Team Name', 'Away Team Name']]"
+    "df.loc[5:9, ['Home Team Name', 'Away Team Name']]"
    ]
   },
   {
@@ -843,7 +903,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Print all info for games played in 1950 for Group 3\n"
+    "# Print all info for games played in 1950 for Group 3\n",
+    "fd"
    ]
   },
   {
