--- a/index.ipynb
+++ b/index.ipynb
@@ -904,7 +904,7 @@
    "outputs": [],
    "source": [
     "# Print all info for games played in 1950 for Group 3\n",
-    "df."
+    "df.loc[]"
    ]
   },
   {
