Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -899,21 +899,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-14-70fae007af94>, line 2)",
+     "evalue": "EOL while scanning string literal (<ipython-input-15-873219476622>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-14-70fae007af94>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    df.loc[(df['Year'] == 1950) & (df[Stage'] == 'Group 3')]\u001b[0m\n\u001b[0m                                                 ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-15-873219476622>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    df.loc[(df['Year'] == 1950) & (df[Stage'] == \"Group 3\")]\u001b[0m\n\u001b[0m                                                            ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m EOL while scanning string literal\n"
      ]
     }
    ],
    "source": [
     "# Print all info for games played in 1950 for Group 3\n",
-    "df.loc[(df['Year'] == 1950) & (df[Stage'] == \"Group 3\")]"
+    "df.loc[(df['Year\"] == 1950) & (df[Stage'] == \"Group 3\")]"
    ]
   },
   {
