Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1076,12 +1076,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "56    36502.0\n",
+       "61     7903.0\n",
+       "65    25811.0\n",
+       "Name: Attendance, dtype: float64"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Print the 'Attendance' column for games played in 1950 for Group 3\n",
-    "df.loc[(df[\"Year\"] == 1950) & (df[\"Stage\"] == \"Group 3\"), \"atten\"]\n"
+    "df.loc[(df[\"Year\"] == 1950) & (df[\"Stage\"] == \"Group 3\"), \"Attendance\"]\n"
    ]
   },
   {
