--- a/index.ipynb
+++ b/index.ipynb
@@ -1111,7 +1111,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Number of home games played by the Netherlands\n"
+    "# Number of home games played by the Netherlands\n",
+    "Neth_home = df"
    ]
   },
   {
