--- a/index.ipynb
+++ b/index.ipynb
@@ -1112,7 +1112,7 @@
    "outputs": [],
    "source": [
     "# Number of home games played by the Netherlands\n",
-    "Neth_home = df"
+    "Neth_home = df[df['Home ']]"
    ]
   },
   {
