Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1107,13 +1107,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32\n"
+     ]
+    }
+   ],
    "source": [
     "# Number of home games played by the Netherlands\n",
     "Neth_home = df[df['Home Team Name'] == ('Netherlands')]\n",
-    "print(len(Ne))"
+    "print(len(Neth_home))"
    ]
   },
   {
