Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1137,7 +1137,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Number of games played by the Netherlands in total\n"
+    "# Number of games played by the Netherlands in total\n",
+    "Neth_away = df[df['Away Team Name'] == ('Netherlands')]\n",
+    "print(len(Neth_home))"
    ]
   },
   {
