Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1133,13 +1133,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22\n"
+     ]
+    }
+   ],
    "source": [
     "# Number of games played by the Netherlands in total\n",
     "Neth_away = df[df['Away Team Name'] == ('Netherlands')]\n",
-    "print(len(Neth_home))"
+    "print(len(Neth_away))"
    ]
   },
   {
