Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1121,7 +1121,7 @@
    "source": [
     "# Number of home games played by the Netherlands\n",
     "Neth_home = df[df['Home Team Name'] == ('Netherlands')]\n",
-    "print(len(Neth_home))"
+    "print(len(Neth_home)+ len())"
    ]
   },
   {
