Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1121,7 +1121,7 @@
    "source": [
     "# Number of home games played by the Netherlands\n",
     "Neth_home = df[df['Home Team Name'] == ('Netherlands')]\n",
-    "print(len(Neth_home)+ len())"
+    "print(len(Neth_home))"
    ]
   },
   {
@@ -1147,7 +1147,7 @@
    "source": [
     "# Number of games played by the Netherlands in total\n",
     "Neth_away = df[df['Away Team Name'] == ('Netherlands')]\n",
-    "print(len(Neth_away))"
+    "print(len(Neth_away) + N)"
    ]
   },
   {
