Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1147,7 +1147,7 @@
    "source": [
     "# Number of games played by the Netherlands in total\n",
     "Neth_away = df[df['Away Team Name'] == ('Netherlands')]\n",
-    "print(len(Neth_away) + N)"
+    "print(len(Neth_away) + len(Neth_home))"
    ]
   },
   {
