--- a/index.ipynb
+++ b/index.ipynb
@@ -1163,7 +1163,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Number of games the USA played in the 2014 world cup\n"
+    "# Number of games the USA played in the 2014 world cup\n",
+    "USA_home_and_away = df[(df['Year'] == 2014) &\n",
+    "                       ((df['Home Team Name'] == 'USA') |\n",
+    "                        (df['Away Team Name'] == 'USA'))]\n",
+    "print(len(USA_home_and_away))"
    ]
   },
   {
