--- a/index.ipynb
+++ b/index.ipynb
@@ -1196,13 +1196,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "24\n",
+      "48\n",
+      "24\n"
+     ]
+    }
+   ],
    "source": [
-    "# Number of countries participated in the 1986 world cup\n"
+    "# Number of countries participated in the 1986 world cup\n",
+    "games_86 = df[df['Year'] == 1986]\n",
+    "home = list(games_86['Home Team Name'].unique())\n",
+    "away = list(games_86['Away Team Name'].unique())\n",
+    "print(len(home))\n",
+    "home += away\n",
+    "print(len(home))\n",
+    "print(len(set(home)))"
    ]
   },
   {
@@ -1218,7 +1235,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Number of matches that had 5 or more goals in total\n"
+    "# Number of matches that had 5 or more goals in total\n",
+    "df['Total_Goals'] = df['Home Team Goals'] + df['Away Team Goals']\n",
+    "print(len(df[df['Total_Goals'] >= 5]))"
    ]
   },
   {
