--- a/index.ipynb
+++ b/index.ipynb
@@ -1231,9 +1231,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "147\n"
+     ]
+    }
+   ],
    "source": [
     "# Number of matches that had 5 or more goals in total\n",
     "df['Total_Goals'] = df['Home Team Goals'] + df['Away Team Goals']\n",
@@ -1260,7 +1268,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a new column 'Half-time Goals' in df\n"
+    "# Create a new column 'Half-time Goals' in df\n",
+    "df['Half-time Goals'] = df['Half-time Home Goals'] + df['Half-time Away Goals']"
    ]
   },
   {
