--- a/index.ipynb
+++ b/index.ipynb
@@ -1955,7 +1955,7 @@
    ],
    "source": [
     "# Check the updated columns\n",
-    "df.loc[df['Home Team Name'].str.contains('Korea')]"
+    "df.loc[df['Home Team Name'].str.contains('Korea')]\n"
    ]
   },
   {
